# newsfeed

./: README.md  config.example.yml  pyproject.toml
.github/workflows/newsfeed/: pyproject.toml  scheduler.py
.github/workflows/newsfeed/newsfeed/: service.py
.github/workflows/newsfeed/newsfeed/newsfeed/templates/: digest.html.j2
.github/workflows/tests/: test_config.py
.github/workflows/tests/tests/: test_digest.py
newsfeed/: __init__.py  cli.py  config.py  digest.py  mailer.py  rss.py  scheduler.py  service.py
newsfeed/templates/: digest.html.j2  digest.txt.j2
tests/: test_config.py  test_digest.py
