[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newsfeed"
version = "0.1.0"
description = "Configurable RSS digest scheduler and mailer"
readme = "README.md"
authors = [
  {name = "Happy Mag Automation", email = "automation@example.com"}
]
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "pydantic>=2.5.0",
  "typer>=0.9.0",
  "APScheduler>=3.10.4",
  "jinja2>=3.1.3",
  "pyyaml>=6.0.1"
]

[project.scripts]
newsfeed = "newsfeed.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["newsfeed"]

[tool.hatch.build]
include = [
  "newsfeed/templates/*.j2",
]
